2024-04-18T01:01:49Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8730787600 # 192
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-18
* notice: last 14d: unq all: 21 195
* notice: prev accum: outdated-unq outdated-all / unq all: 604 3253 / 629 3447
* notice: next accum: outdated-unq outdated-all / unq all: 607 3259 / 630 3454
* notice: prev exec diff / last date diff / accum: unq all: +1 +7 -0 -0 / +4 +68 -0 -0 / 4 68
* notice: removed / changed dates: [2024-04-03] / [2024-04-17]

2024-04-17T16:18:11Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8725300080 # 191
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: last 14d: unq all: 22 192
* notice: prev accum: outdated-unq outdated-all / unq all: 604 3253 / 626 3386
* notice: next accum: outdated-unq outdated-all / unq all: 604 3253 / 629 3447
* notice: prev exec diff / last date diff / accum: unq all: +3 +61 -1 -2 / +3 +61 -0 -0 / 3 61
* notice: removed / changed dates: [] / [2024-04-03 2024-04-17]

2024-04-17T01:02:18Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8714660215 # 189
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2024-04-17
* notice: last 14d: unq all: 20 133
* notice: prev accum: outdated-unq outdated-all / unq all: 604 3253 / 624 3383
* notice: next accum: outdated-unq outdated-all / unq all: 604 3253 / 626 3386
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +3 +4 -0 -0 / 3 4
* notice: removed / changed dates: [] / [2024-04-16]

2024-04-16T08:17:38Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/8702264941 # 187