@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-04-18T01:01:49Z",
-  "count_outdated" : 3259,
-  "uniques_outdated" : 607,
+  "timestamp" : "2024-04-19T01:02:12Z",
+  "count_outdated" : 3266,
+  "uniques_outdated" : 608,
   "count" : 3454,
   "uniques" : 630,
   "views" : [
-    {
-      "timestamp": "2024-04-04T00:00:00Z",
-      "count": 7,
-      "count_minmax": [ 7, 7 ],
-      "count_decinc": [ 0, 7 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-04-05T00:00:00Z",
       "count": 2,
