@@ -1,12 +1,7 @@
 {
-  "count": 195,
-  "uniques": 21,
+  "count": 188,
+  "uniques": 20,
   "views": [
-    {
-      "timestamp": "2024-04-04T00:00:00Z",
-      "count": 7,
-      "uniques": 1
-    },
     {
       "timestamp": "2024-04-05T00:00:00Z",
       "count": 2,
